Fix bug where if image of items had a greater height orwidth than expected it would stretch our item container's dimensions

--- a/src/styles/itemContainers.css
+++ b/src/styles/itemContainers.css
@@ -5,6 +5,7 @@
     max-width: 95%;
     grid-template: repeat(3, 1fr) 2rem / repeat(4, 1fr);
     justify-items: center;
+    align-items: center;
 }
 
 .category-layout {
